--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -41,9 +41,10 @@ $global-radius: 4px !default;
 //Module padding
 @mixin module-fullHeight {
   width: 100%;
-  padding: 4em;
+  padding: 4em 0;
   height: auto;
   height: 100vh;
+  min-height: 30em;
   display: flex;
   align-items: center;
   justify-content: center;
